<resources>
    <string name="app_name">CredEasy</string>
    <string name="address">Address : </string>
    <string name="address_req">Address <font color='#FF0000'>*</font></string>
    <string name="name">Name <font color='#FF0000'>*</font></string>
    <string name="credit">Credit <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Profile</string>
    <string name="add_fragment_title">Add Profile</string>
    <string name="edit_fragment_title">Edit Profile</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">₹</string>
    <string name="edit_item" >Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="name_req">Name : </string>
    <string name="credit_amount">Credit : </string>
    <string name="phone_no_req">Phone No <font color='#FF0000'>*</font></string>
    <string name="phone_no">Phone no :</string>
    <string name="call">Call</string>
<!--    <string name="get_location">Get Location</string>-->
    <string name="update">Update</string>
    <string name="verify">Verify</string>
    <string name="verify_mobile">Verify mobile</string>
    <string name="login">LOGIN</string>
    <string name="_91">+91</string>
    <string name="logout">Logout</string>
</resources>