<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin"
    tools:context=".ItemDetailFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:elevation="11dp"
        app:cardCornerRadius="11dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/blue_100">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="26dp">

            <TextView
                android:id="@+id/name_display"
                style="@style/Widget.CredEasy.TextView"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:text="@string/name_req"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/item_name"
                style="@style/Widget.CredEasy.TextView"
                android:layout_width="254dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/name_display"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Savresh Vyas" />

            <TextView
                android:id="@+id/credit_amt"
                style="@style/Widget.CredEasy.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/credit_amount"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_display" />

            <TextView
                android:id="@+id/item_credit"
                style="@style/Widget.CredEasy.TextView"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/credit_amt"
                app:layout_constraintTop_toBottomOf="@+id/item_name"
                tools:text="₹5000" />

            <TextView
                android:id="@+id/item_address"
                style="@style/Widget.CredEasy.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_credit" />

            <TextView
                android:id="@+id/item_count"
                style="@style/Widget.CredEasy.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/item_count_label"
                app:layout_constraintTop_toTopOf="@+id/item_address"
                tools:text="Nilanga" />

            <TextView
                android:id="@+id/item_count_label"
                style="@style/Widget.CredEasy.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_credit" />


            <TextView
                android:id="@+id/phone_no"
                style="@style/Widget.CredEasy.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone_no"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_count_label" />

            <TextView
                android:id="@+id/item_number"
                style="@style/Widget.CredEasy.TextView"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/phone_no"
                app:layout_constraintTop_toBottomOf="@+id/item_count"
                tools:text="123456789" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/delete_item"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/delete"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:contentDescription="@string/edit_item"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white"
        />

    <Button
        android:id="@+id/call"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/call"
        android:textColor="@color/blue_100"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>

